--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.2.7",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
